k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: red-handed
  labels:
    name: red-handed
